# animating-physics-mspmaxwell

./: LICENSE  README.md  setup.cfg
src/projectile_motion/: animation.py  configs.py  main.py  window.py
