[metadata]
name = projectile_motion
description = A configurable projectile motion animation
version = 0.0.1
author = Maxwell Nganyadi
author_email = maxwell.nganyadi@gmail.com
license = MIT License

[options]
install_requires =
    requests
    importlib-metadata; python_version < "3.8"

package_dir=
    =src
packages=find:

[options.packages.find]
where=src
